Ensure header text white for all tabs on mobile

--- a/geonode-project/asu/dataexchange/static/css/site_base.css
+++ b/geonode-project/asu/dataexchange/static/css/site_base.css
@@ -56,7 +56,7 @@ header#header {
   .home .jumbotron {
     margin-top: -26px;
   }
-  .home .header__sitename a {
+  .asu-site-title {
       color: #FFF;
   }
 }
